--- a/MySQLFun/Views/Home/Index.cshtml
+++ b/MySQLFun/Views/Home/Index.cshtml
@@ -2,14 +2,34 @@
     ViewData["Title"] = "Home Page";
 }
 
-@model List<Recipe>
+@model List<Bowler>
 
-<h1>Recipes</h1>
+<h1>Bowlers</h1>
 
 <ul>
     @foreach (var x in Model)
     {
-        <li>@x.RecipeID - @x.RecipeTitle</li>
+        <li>@x.BowlerID - @x.BowlerFirstName - @x.BowlerLastName</li>
 
     }
 </ul>
+
+
+<table>
+    <thead>
+        <tr>
+            <td>Name</td>
+            <td>Middle Int.</td>
+            <td>Last Name</td>
+        </tr>
+    </thead>
+
+    <tbody>
+        <tr>
+            @foreach (var x in Model)
+            {
+                <td>@x.BowlerFirstName</td>
+            }
+        </tr>
+    </tbody>
+</table>
