--- a/MySQLFun/Views/Home/Index.cshtml
+++ b/MySQLFun/Views/Home/Index.cshtml
@@ -1,35 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
+
 }
 
-@model List<Bowler>
-
-<h1>Bowlers</h1>
-
-<ul>
-    @foreach (var x in Model)
-    {
-        <li>@x.BowlerID - @x.BowlerFirstName - @x.BowlerLastName</li>
-
-    }
-</ul>
-
-
-<table>
-    <thead>
-        <tr>
-            <td>Name</td>
-            <td>Middle Int.</td>
-            <td>Last Name</td>
-        </tr>
-    </thead>
-
-    <tbody>
-        <tr>
-            @foreach (var x in Model)
-            {
-                <td>@x.BowlerFirstName</td>
-            }
-        </tr>
-    </tbody>
-</table>
+<h1>Welcome to the Bowling leage!</h1>
