--- a/MySQLFun/Views/Home/Create.cshtml
+++ b/MySQLFun/Views/Home/Create.cshtml
@@ -6,6 +6,38 @@
 @model Bowler
 
 <form method="post">
-    <label>Bowler First Name:</label>
-    <input asp-for="BowlerFirstName"/>
+    <label asp-for="BowlerFirstName">Bowler First Name:</label>
+    <input asp-for="BowlerFirstName" />
+    <br />
+
+    <label asp-for="BowlerMiddleInit">Bowler Middle Name:</label>
+    <input asp-for="BowlerMiddleInit" />
+    <br />
+
+
+    <label asp-for="BowlerLastName">Bowler Last Name:</label>
+    <input asp-for="BowlerLastName" />
+    <br />
+
+    <label asp-for="BowlerAddress">Address:</label>
+    <input asp-for="BowlerAddress"/>
+    <br />
+
+    <label asp-for="BowlerCity">City:</label>
+    <input asp-for="BowlerCity" />
+    <br />
+
+    <label asp-for="BowlerState">State:</label>
+    <input asp-for="BowlerState" />
+    <br />
+
+    <label asp-for="BowlerZip">Zip:</label>
+    <input asp-for="BowlerZip" />
+    <br />
+
+    <label asp-for="BowlerPhoneNumber">Phone:</label>
+    <input asp-for="BowlerPhoneNumber" />
+    <br />
+
+    <button type="submit">Add</button>
 </form>
