--- a/MySQLFun/Views/Shared/_Layout.cshtml
+++ b/MySQLFun/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - MySQLFun - <a asp-area="" asp-controller="Home" asp-action="Home">Privacy</a>
+            &copy; 2022 - MySQLFun - <a asp-area="" asp-controller="Home" asp-action="Home">Home</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
