--- a/MySQLFun/Views/Home/ContactList.cshtml
+++ b/MySQLFun/Views/Home/ContactList.cshtml
@@ -38,10 +38,10 @@
                 <td>@x.BowlerZip</td>
                 <td>@x.BowlerPhoneNumber</td>
                 <td class="text-center">
-                    <a asp-controller="Home" asp-action="Edit" asp-route-id="@x.BowlerID">Edit</a>
+                    <a class="btn btn-sm " asp-controller="Home" asp-action="Edit" asp-route-id="@x.BowlerID">Edit</a>
                 </td>
                 <td class="text-center">
-                    <a asp-controller="Home" asp-action="Delete" asp-route-id="@x.BowlerID">Delete</a>
+                    <a class="btn btn-sm btn-danger" asp-controller="Home" asp-action="Delete" asp-route-id="@x.BowlerID">Delete</a>
                 </td>
             </tr>
         }
