--- a/MySQLFun/Views/Home/Index.cshtml
+++ b/MySQLFun/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
     ViewData["Title"] = "Home";
-
 }
 
 <h1>Welcome to the Bowling leage!</h1>
+
+<p>Click to add a new bowler <a asp-action="Create">here!</a></p>
 
 <img src="~/img/bowl.webp" height="900"/>
