--- a/MySQLFun/Views/Shared/_Layout.cshtml
+++ b/MySQLFun/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactList">Contact List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Create">Create</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TeamView">Team View</a>
                         </li>
 
                     </ul>
