--- a/MySQLFun/Views/Shared/_Layout.cshtml
+++ b/MySQLFun/Views/Shared/_Layout.cshtml
@@ -19,10 +19,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactList">Contact List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Sharks">Contact List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TeamView">Team View</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="TeamView">Team View</a>
                         </li>
 
                     </ul>
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - MySQLFun - <a asp-area="" asp-controller="Home" asp-action="Home">Home</a>
+            &copy; 2022 - MySQLFun - <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
