--- a/MySQLFun/Views/Home/Create.cshtml
+++ b/MySQLFun/Views/Home/Create.cshtml
@@ -4,6 +4,8 @@
 @model Bowler
 
 <form method="post">
+    <div asp-validation-summary="All"></div>
+
     <label asp-for="BowlerFirstName">Bowler First Name:</label>
     <input asp-for="BowlerFirstName" />
     <br />
@@ -18,7 +20,7 @@
     <br />
 
     <label asp-for="BowlerAddress">Address:</label>
-    <input asp-for="BowlerAddress"/>
+    <input asp-for="BowlerAddress" />
     <br />
 
     <label asp-for="BowlerCity">City:</label>
@@ -36,6 +38,17 @@
     <label asp-for="BowlerPhoneNumber">Phone:</label>
     <input asp-for="BowlerPhoneNumber" />
     <br />
+    <label asp-for="TeamID">Team:</label>
+    <select asp-for="TeamID">
+        @foreach (Team t in ViewBag.Teams)
+        {
+            <option value="@t.TeamID">@t.TeamName</option>
+        }
+        <option></option>
+    </select>
+    <br />
 
     <button type="submit">Add</button>
+    <button asp-controller="Team" asp-action="TeamView">Cancel</button>
+
 </form>
