--- a/MySQLFun/Views/Shared/_Layout.cshtml
+++ b/MySQLFun/Views/Shared/_Layout.cshtml
@@ -18,11 +18,11 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
+                        @*<li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactList">ORIGINAL</a>
+                        </li>*@
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Sharks">Contact List</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="TeamView">Team View</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="TeamView">Contact List</a>
                         </li>
 
                     </ul>
