--- a/MySQLFun/Views/Team/Dolphins.cshtml
+++ b/MySQLFun/Views/Team/Dolphins.cshtml
@@ -8,7 +8,7 @@
 <h1>Dolphins</h1>
 
 <div class="container">
-    <a class="navbar-brand" asp-area="" asp-controller="Team" asp-action="ContactList">All Players</a>
+    <a class="navbar-brand" asp-area="" asp-controller="Team" asp-action="TeamView">All Players</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
