--- a/MySQLFun/Views/Team/TeamView.cshtml
+++ b/MySQLFun/Views/Team/TeamView.cshtml
@@ -5,7 +5,8 @@
 @model List<Bowler>
 
 
-<h1>All Players</h1>
+<h1>Contact List</h1>
+<button style="float:right"><a asp-controller="Home" asp-action="Create">Create new record</a></button>
 
 <div class="container">
     <a class="navbar-brand" asp-area="" asp-controller="Team" asp-action="TeamView">All Players</a>
@@ -14,16 +15,16 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Marlins">1 Marlins</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactList">2 Sharks</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactList">3 Terrapins</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactList">4 Barracudas</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactList">5 Dolphins</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactList">6 Orcas</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactList">7 Manatees</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactList">8 Swordfish</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactList">9 Huckleberrys</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactList">10 MintJuleps</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Marlins">1 Marlins</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Sharks">2 Sharks</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Terrapins">3 Terrapins</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Barracudas">4 Barracudas</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Dolphins">5 Dolphins</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Orcas">6 Orcas</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Manatees">7 Manatees</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Swordfish">8 Swordfish</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Huckleberrys">9 Huckleberrys</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="MintJuleps">10 MintJuleps</a>
     </div>
 </div>
 
@@ -41,6 +42,7 @@
             <td>State</td>
             <td>Zip</td>
             <td>Phone Number</td>
+            <td>Team</td>
             <td></td>
             <td></td>
         </tr>
@@ -49,22 +51,24 @@
     <tbody>
         @foreach (var x in Model)
         {
-            <tr>
-                <td>@x.BowlerFirstName</td>
-                <td>@x.BowlerMiddleInit</td>
-                <td>@x.BowlerLastName</td>
-                <td>@x.BowlerAddress</td>
-                <td>@x.BowlerCity</td>
-                <td>@x.BowlerState</td>
-                <td>@x.BowlerZip</td>
-                <td>@x.BowlerPhoneNumber</td>
-                <td class="text-center">
-                    <a class="btn btn-sm " asp-controller="Home" asp-action="Edit" asp-route-id="@x.BowlerID">Edit</a>
-                </td>
-                <td class="text-center">
-                    <a class="btn btn-sm btn-danger" asp-controller="Home" asp-action="Delete" asp-route-id="@x.BowlerID">Delete</a>
-                </td>
-            </tr>
+        <tr>
+            <td>@x.BowlerFirstName</td>
+            <td>@x.BowlerMiddleInit</td>
+            <td>@x.BowlerLastName</td>
+            <td>@x.BowlerAddress</td>
+            <td>@x.BowlerCity</td>
+            <td>@x.BowlerState</td>
+            <td>@x.BowlerZip</td>
+            <td>@x.BowlerPhoneNumber</td>
+            <td>@x.Teams.TeamName</td>
+            
+            <td class="text-center">
+                <a class="btn btn-sm " asp-controller="Home" asp-action="Edit" asp-route-id="@x.BowlerID">Edit</a>
+            </td>
+            <td class="text-center">
+                <a class="btn btn-sm btn-danger" asp-controller="Home" asp-action="Delete" asp-route-id="@x.BowlerID">Delete</a>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
