--- a/MySQLFun/Views/Home/Edit.cshtml
+++ b/MySQLFun/Views/Home/Edit.cshtml
@@ -49,6 +49,6 @@
     </select>
     <br />
 
-    <button type="submit">Add</button>
-    <button asp-controller="Home" asp-action="ContactList">Cancel</button>
+    <button class="btn btn-success" type="submit">Add</button>
+    <button class="btn btn-dark" asp-controller="Team" asp-action="TeamVIew">Cancel</button>
 </form>
