--- a/MySQLFun/Views/Team/TeamView.cshtml
+++ b/MySQLFun/Views/Team/TeamView.cshtml
@@ -35,7 +35,7 @@
     <thead class="font-weight-bold">
         <tr>
             <td>First Name</td>
-            <td>Middle</td>
+            <td>Middle Initial</td>
             <td>Last Name</td>
             <td>Address</td>
             <td>City</td>
