--- a/MySQLFun/Views/Home/Delete.cshtml
+++ b/MySQLFun/Views/Home/Delete.cshtml
@@ -10,6 +10,6 @@
     <input asp-for="BowlerID" hidden />
 
     <button type="submit" class="btn btn-sm btn-danger">Yes</button>
-    <button asp-action="ContactList" class="btn btn-sm ">Cancel</button>
+    <button asp-controller="Team" asp-action="TeamView" class="btn btn-sm ">Cancel</button>
 
 </form>
