--- a/MySQLFun/Views/Team/Barracudas.cshtml
+++ b/MySQLFun/Views/Team/Barracudas.cshtml
@@ -17,7 +17,7 @@
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Marlins">1 Marlins</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Sharks">2 Sharks</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Terrapins">3 Terrapins</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Barracudas">4 Barracudas</a>
+        <a class="nav-link text-dark btn-primary" asp-area="" asp-controller="Team" asp-action="Barracudas">4 Barracudas</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Dolphins">5 Dolphins</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Orcas">6 Orcas</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Manatees">7 Manatees</a>
