--- a/MySQLFun/Views/Team/Huckleberrys.cshtml
+++ b/MySQLFun/Views/Team/Huckleberrys.cshtml
@@ -22,7 +22,7 @@
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Orcas">6 Orcas</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Manatees">7 Manatees</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Swordfish">8 Swordfish</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Huckleberrys">9 Huckleberrys</a>
+        <a class="nav-link text-dark btn-primary" asp-area="" asp-controller="Team" asp-action="Huckleberrys">9 Huckleberrys</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="MintJuleps">10 MintJuleps</a>
     </div>
 </div>
