--- a/MySQLFun/Views/Home/Index.cshtml
+++ b/MySQLFun/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home";
 }
 
-<h1>Welcome to the Bowling leage!</h1>
+<h1>Welcome to the Bowling league!</h1>
 
 <p>Click to add a new bowler <a asp-action="Create">here!</a></p>
 
