--- a/MySQLFun/Views/Team/Orcas.cshtml
+++ b/MySQLFun/Views/Team/Orcas.cshtml
@@ -19,7 +19,7 @@
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Terrapins">3 Terrapins</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Barracudas">4 Barracudas</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Dolphins">5 Dolphins</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Orcas">6 Orcas</a>
+        <a class="nav-link text-dark btn-primary" asp-area="" asp-controller="Team" asp-action="Orcas">6 Orcas</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Manatees">7 Manatees</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Swordfish">8 Swordfish</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Huckleberrys">9 Huckleberrys</a>
