--- a/MySQLFun/Views/Team/Sharks.cshtml
+++ b/MySQLFun/Views/Team/Sharks.cshtml
@@ -15,7 +15,7 @@
     </button>
     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Marlins">1 Marlins</a>
-        <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Sharks">2 Sharks</a>
+        <a class="nav-link text-dark btn-primary" asp-area="" asp-controller="Team" asp-action="Sharks">2 Sharks</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Terrapins">3 Terrapins</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Barracudas">4 Barracudas</a>
         <a class="nav-link text-dark" asp-area="" asp-controller="Team" asp-action="Dolphins">5 Dolphins</a>
